# TranslaBot

./: .env  Dockerfile  LICENSE  README.md  app.py  bc_evaluation_notebook.ipynb  languages.json  pyproject.toml
custom_modules/: chatengine.py  frontend_modules.py  metrics.py
